--- a/new-year/index.html
+++ b/new-year/index.html
@@ -3,13 +3,14 @@
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="/new-year/style/of.css">
+   
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;700&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="../style/of.css">
    <title>new try</title>   
  </head>
  <body>
@@ -22,12 +23,35 @@
          <h1>65% OFF</h1>
          <p>OUR HOLIDAY DEALS ARE BETTER</p>
          <h2>ALL CATEGORIES</h2>
-         <img src="/new-year/pic/2stp.png" alt="">
+         <img src="../pic/2stp.png" alt="">
       </div>
-      <div class="welcom">
-         <img src="/new-year/pic/3stp.png" alt="">
-         <h1>Welcome to <br>midnight party</h1>
-         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+      <div class="welcome">
+           <div>    
+         <h1>Welcome to <br> midnight party</h1>
+         <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie <br> malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+         <button>Join Now</button>
+         </div>  
+         <img src="../pic/4stp.png" alt="">
+      </div>
+      <div class="bor">
+         <h1 ><span class="rad">Place:</span> New Park Hotel</h1>
+         <h1 ><span class="rad">Date:</span> 31 December Night 2023</h1>
+         <h1 ><span class="rad">Time:</span> Evening 7.30 pm to 12.30 am</h1>
+         <button>Join Now</button>
+      </div>
+      <div class="gol">
+         <div class="fst">
+            <h4>NEW BEST OFFER</h4>
+            <h2>Coming Soon</h2>
+            <p>Dolor sit amet consectetur. Consequat eget <br>consectetur maecenas <br>sed molestie malesuada. Ipsum <br>sed sodales risus ut pellentesque vel euismod. </p>
+         </div>  
+         <div class="imgg">
+            <img src="../pic/5stp.png" alt=""></div>
+         <div class="lst">
+            <h1>2024</h1>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img src="../pic/6stp.png" alt="">
+         </div>
       </div>
       
 
